--- a/forecast.html
+++ b/forecast.html
@@ -9,9 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/forecast.css">
 
-    <title>Home</title>
+    <title>Forecast 5dias / 3horas</title>
 </head>
 <body class="img-fluid" style="background-image: url('imgs/fundo.webp'); background-repeat: no-repeat; background-size: cover;">
     <!-- Barra navegação -->
@@ -42,7 +42,7 @@
                         
                         <!-- Primeira opção - Home -->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" style="color: white; font-weight: bold;">Home</a>
+                            <a class="nav-link active" aria-current="page" href="home.html" style="color: white; font-weight: bold;">Home</a>
                         </li>
 
                         <!-- Segunda opção - Detalhes -->
@@ -52,7 +52,7 @@
 
                         <!-- Terceira opção - Forecast -->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="forecast.html" style="color: white; font-weight: bold;">Forecast</a>
+                            <a class="nav-link active" aria-current="page" href="#" style="color: white; font-weight: bold;">Forecast</a>
                         </li>
 
                         <!-- Terceira opção - Forecast -->
@@ -104,6 +104,6 @@
     </div>
 
     <!-- Conectar ao ficheiro externo da home.js -->
-    <script type="text/javascript" src="js/home.js"></script>
+    <script type="text/javascript" src="js/forecast.js"></script>
 </body>
 </html>
