--- a/forecast.html
+++ b/forecast.html
@@ -89,16 +89,53 @@
     <div class="position-sticky rounded opacity-75">
         <div class="card text-center mx-auto" style="width: 50%; margin-top: 100px;">
             <div class="card-header">
-                <h3 class="card-title">Metereologia</h3>
+                <h3 class="card-title" id="cidade"></h3>
             </div>
             <div class="card-body m-auto" style="width: fit-content; align-content: center;">
                 <ul class="list-group list-group-flush" id="lista">
-                    <li class="list-group-item" id="temp">
-                        <span id="cidade"></span>
-                        <span><img class="owm-weather-icon" id="tempo" alt="Tempo Atual"></span>
-                        <span id="temperatura"></span>
-                    </li>
+                    <div class="panel">
+                        <li class="list-group-item" id="temp" onclick="forecast_3h()">
+                            <span style="display: none;" id="ident"></span>
+                            <span id="data"></span>
+                            <span><img class="owm-weather-icon" id="tempo" alt="Tempo Atual"></span>
+                            <span id="temperatura"></span>
+                            <span>
+                                <img class="owm-weather-icon" src="imgs/vento.png" alt="Icon Vento" style="width: 25px; margin-left: 100px; margin-right: 10px;">
+                            </span>
+                            <span id="vento"></span>
+                            <span>
+                                <img class="owm-weather-icon" src="imgs/icon_hum.jpg" alt="Icon Humidade" style="width: 40px; margin-left: 90px;">
+                            </span>
+                            <span id="hum"></span>
+                        </li>
+                    </div>
                 </ul>
+                <div class="scrolling-container" id="lista2" onclick="forecast_5d()">
+                    <div class="scrolling-container-content">
+                        <div class="daily-detail-container" id="forecast">
+                            <table id="tabela">
+                                <tr id="legenda">
+                                    <th><img class="owm-weather-icon float-start" id="tempo2" alt="Forecast"></th>
+                                    <th>Manhã</th>
+                                    <th>Tarde</th>
+                                    <th>Noite</th>
+                                </tr>
+                                <tr>
+                                    <th>Temperatura [°C]</th>
+                                    <th id="temp2"></th>
+                                    <th id="temp2"></th>
+                                    <th id="temp2"></th>
+                                </tr>
+                                <tr>
+                                    <th>Humidade [%]</th>
+                                    <th id="hum2"></th>
+                                    <th id="hum2"></th>
+                                    <th id="hum2"></th>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
