--- a/forecast.html
+++ b/forecast.html
@@ -94,7 +94,7 @@
             <div class="card-body m-auto" style="width: fit-content; align-content: center;">
                 <ul class="list-group list-group-flush" id="lista">
                     <div class="panel">
-                        <li class="list-group-item" id="temp" onclick="forecast_3h(id_date)">
+                        <li class="list-group-item" id="temp" onclick="forecast_3h(this)">
                             <span id="id_date" style="display: none;"></span>
                             <span id="data"></span>
                             <span><img class="owm-weather-icon" id="tempo" alt="Tempo Atual"></span>
