--- a/forecast.html
+++ b/forecast.html
@@ -111,26 +111,23 @@
                     </div>
                 </ul>
                 <div class="scrolling-container" id="lista2" onclick="forecast_5d()">
+                    <div>
+                        <img class="owm-weather-icon" id="tempo2" alt="Forecast">
+                    </div>
                     <div class="scrolling-container-content" id="forecast">
                         <div id="data_atual"></div>
                         <table id="tabela" style="align-items: center;">
                             <tr id="legenda">
-                                <th><img class="owm-weather-icon" id="tempo2" alt="Forecast"></th>
-                                <th>Manhã</th>
-                                <th>Tarde</th>
-                                <th>Noite</th>
+                                <th></th>
+                                <th id="hour2"></th>
                             </tr>
                             <tr>
                                 <th>Temperatura [°C]</th>
                                 <th id="temp2"></th>
-                                <th id="temp3"></th>
-                                <th id="temp4"></th>
                             </tr>
                             <tr>
                                 <th>Humidade [%]</th>
                                 <th id="hum2"></th>
-                                <th id="hum3"></th>
-                                <th id="hum4"></th>
                             </tr>
                         </table>
                     </div>
