--- a/forecast.html
+++ b/forecast.html
@@ -55,25 +55,6 @@
                             <a class="nav-link active" aria-current="page" href="#" style="color: white; font-weight: bold;">Forecast</a>
                         </li>
 
-                        <!-- Terceira opção - Forecast -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font-weight: bold;">Forecast</a>
-
-                            <!-- Criar lista dropdown dentro da opção Favoritos -->
-                            <ul class="dropdown-menu dropdown-menu-dark">
-
-                                <!-- Opção 1 -->
-                                <li>
-                                    <a class="dropdown-item" href="forecast_5dias.html"><b>5 dias</b></a>
-                                </li>
-
-                                <!-- Opção 2 -->
-                                <li>
-                                    <a class="dropdown-item" href="forecast_3horas.html"><b>3 horas</b></a>
-                                </li>
-                            </ul>
-                        </li>
-
                         <!-- Quarta opção - Favoritos -->
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="favoritos.html" style="color: white; font-weight: bold;">Favoritos</a>
@@ -89,7 +70,11 @@
     <div class="position-sticky rounded opacity-75">
         <div class="card text-center mx-auto" style="width: 50%; margin-top: 100px;">
             <div class="card-header">
-                <h3 class="card-title" id="cidade"></h3>
+                <h3 id="cidade"></h3>
+                <div id="procurar">
+                    <input type="text" id="pesquisa" placeholder="Cidade...">
+                    <button class="btn btn-primary" id="btSearch" onclick="procurar(pesquisa)">Procurar</button>
+                </div>
             </div>
             <div class="card-body m-auto" style="width: fit-content; align-content: center;">
                 <ul class="list-group list-group-flush" id="lista">
