--- a/home.html
+++ b/home.html
@@ -68,9 +68,13 @@
 
     <!-- Apresentação da meteorologia das 6 cidades em formato de tabela -->
     <div class="position-sticky rounded opacity-75">
-        <div class="card text-center mx-auto" style="width: 50%; margin-top: 100px;">
+        <div class="card text-center mx-auto" id="card" style="width: 50%; margin-top: 100px;">
             <div class="card-header">
                 <h3 class="card-title">Metereologia</h3>
+                <div id="procurar">
+                    <input type="text" id="pesquisa" placeholder="Cidade...">
+                    <button class="btn btn-primary" id="btSearch" onclick="procurar(pesquisa)">Pesquisar</button>
+                </div>
             </div>
             <div class="card-body m-auto" style="width: fit-content; align-content: center;">
                 <ul class="list-group list-group-flush" id="lista">
@@ -82,7 +86,28 @@
                 </ul>
             </div>
         </div>
+        <div class="card text-center mx-auto" id="card2" onclick="home2()" style="width: 50%; margin-top: 100px; display: none;">          
+            <div class="card-header">
+                <h3 id="cidade2"></h3>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <span><img class="owm-weather-icon" id="tempo2" alt="Tempo Atual"></span>
+                        <span id="temperatura2"></span>
+                        <span>
+                            <img class="owm-weather-icon" src="imgs/vento.png" alt="Icon Vento" style="width: 25px; margin-left: 90px; margin-right: 10px;">
+                        </span>
+                        <span id="vento2"></span>
+                        <span>
+                            <img class="owm-weather-icon" src="imgs/icon_hum.jpg" alt="Icon Humidade" style="width: 40px; margin-left: 90px;">
+                        </span>
+                        <span id="hum2"></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
+  
+   </div>
 
     <!-- Conectar ao ficheiro externo da home.js -->
     <script type="text/javascript" src="js/home.js"></script>
