Página Favoritos - inicial

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                         
                         <!-- Primeira opção - Home -->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" style="color: white; font-weight: bold;">Home</a>
+                            <a class="nav-link active" aria-current="page" href="home.html" style="color: white; font-weight: bold;">Home</a>
                         </li>
 
                         <!-- Segunda opção - Detalhes -->
