--- a/favoritos.html
+++ b/favoritos.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/favoritos.css">
+
     <title>Favoritos</title>
 </head>
-<body>
-    
+<body class="img-fluid" style="background-image: url('imgs/fundo.webp'); background-repeat: no-repeat; background-size: cover;">
+    <!-- Barra navegação -->
+    <nav class="navbar" style="background-color: lightskyblue">
+        <div class="container-fluid">
+            <!-- Texto escrito na barra à esquerda -->
+            <a class="navbar-brand" href="#"><b>Metereologia</b></a>
+
+            <!-- Botão de navegação na barra à direita -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Dentro do botão de navegação -->
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <!-- Cabeçalho -->
+                <div class="offcanvas-header">
+                    <!-- Título do menu -->
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                    <!-- Botão de fechar o menu -->
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+
+                <!-- Corpo -->
+                <div class="offcanvas-body">
+                    <!-- Lista de opções -->
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        
+                        <!-- Primeira opção - Home -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="home.html" style="color: white; font-weight: bold;">Home</a>
+                        </li>
+
+                        <!-- Segunda opção - Detalhes -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="detalhes.html" style="color: white; font-weight: bold;">Detalhes</a>
+                        </li>
+
+                        <!-- Terceira opção - Forecast -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="forecast.html" style="color: white; font-weight: bold;">Forecast</a>
+                        </li>
+
+                        <!-- Quarta opção - Favoritos -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="favoritos.html" style="color: white; font-weight: bold;">Favoritos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Fim da barra de navegação -->
+
+    <!-- Apresentação da meteorologia das 6 cidades em formato de tabela -->
+    <div class="position-sticky rounded opacity-75">
+        <div class="card text-center mx-auto" id="card" style="width: 50%; margin-top: 100px;">
+            <div class="card-header">
+                <h3 class="card-title">Favoritos</h3>
+            </div>
+            <div class="card-body m-auto" style="width: fit-content; align-content: center;">
+                <ul class="list-group list-group-flush" id="lista">
+                    <li class="list-group-item" id="temp">
+                        <span id="cidade"></span>
+                        <span><img class="owm-weather-icon" id="tempo" alt="Tempo Atual"></span>
+                        <span id="temperatura"></span>
+                        <span>
+                            <img class="owm-weather-icon" src="imgs/vento.png" alt="Icon Vento" style="width: 25px; margin-left: 90px; margin-right: 10px;">
+                        </span>
+                        <span id="vento"></span>
+                        <span>
+                            <img class="owm-weather-icon" src="imgs/icon_hum.jpg" alt="Icon Humidade" style="width: 40px; margin-left: 90px;">
+                        </span>
+                        <span id="hum"></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+  
+   </div>
+
+    <!-- Conectar ao ficheiro externo da home.js -->
+    <script type="text/javascript" src="js/favoritos.js"></script>
 </body>
 </html>
