--- a/forecast.html
+++ b/forecast.html
@@ -72,7 +72,7 @@
             <div class="card-header">
                 <h3 id="cidade"></h3>
                 <div class="input-group w-50 mx-auto" id="procurar">
-                    <input type="text" class="form-control" placeholder="Cidade...">
+                    <input type="text" class="form-control" placeholder="Cidade..." id="pesquisa">
                     <button class="btn btn-primary" id="btSearch" onclick="procurar(pesquisa)">Procurar</button>
                 </div>
             </div>
