--- a/forecast.html
+++ b/forecast.html
@@ -18,7 +18,7 @@
     <nav class="navbar" style="background-color: lightskyblue">
         <div class="container-fluid">
             <!-- Texto escrito na barra à esquerda -->
-            <a class="navbar-brand" href="#"><b>Metereologia</b></a>
+            <a class="navbar-brand" href="home.html"><b>Metereologia</b></a>
 
             <!-- Botão de navegação na barra à direita -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
