--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <nav class="navbar" style="background-color: lightskyblue">
         <div class="container-fluid">
             <!-- Texto escrito na barra à esquerda -->
-            <a class="navbar-brand" href="#"><b>Metereologia</b></a>
+            <a class="navbar-brand" href="home.html"><b>Metereologia</b></a>
 
             <!-- Botão de navegação na barra à direita -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
@@ -66,8 +66,8 @@
     </nav>
     <!-- Fim da barra de navegação -->
 
-    <!-- Apresentação da meteorologia das 6 cidades em formato de tabela -->
     <div class="position-sticky rounded opacity-75">
+    	<!-- Apresentação da meteorologia das 6 cidades em formato de tabela -->
         <div class="card text-center mx-auto" id="card" style="width: 50%; margin-top: 100px;">
             <div class="card-header">
                 <h3 class="card-title">Metereologia</h3>
@@ -86,6 +86,7 @@
                 </ul>
             </div>
         </div>
+        <!-- Apresentação da meteorologia da cidade pesquisada -->
         <div class="card text-center mx-auto" id="card2" onclick="home2()" style="width: 50%; margin-top: 100px; display: none;">          
             <div class="card-header">
                 <h3 id="cidade2"></h3>
