--- a/favoritos.html
+++ b/favoritos.html
@@ -18,7 +18,7 @@
     <nav class="navbar" style="background-color: lightskyblue">
         <div class="container-fluid">
             <!-- Texto escrito na barra à esquerda -->
-            <a class="navbar-brand" href="#"><b>Metereologia</b></a>
+            <a class="navbar-brand" href="home.html"><b>Metereologia</b></a>
 
             <!-- Botão de navegação na barra à direita -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
@@ -78,8 +78,8 @@
                     <button class="btn btn-primary" id="btRemove" onclick="remove(remover)">Remover</button>
                 </div>
             </div>
-            <div class="card-body m-auto" style="width: fit-content; align-content: center;">
-                <ul class="list-group list-group-flush" id="lista">
+            <div class="card-body m-auto " style="width: fit-content; align-content: center;">
+                <ul class="list-group list-group-flush " id="lista">
                     <li class="list-group-item" id="temp">
                         <span id="cidade"></span>
                         <span><img class="owm-weather-icon" id="tempo" alt="Tempo Atual"></span>
